<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="bem_vindo_ao_finder_users">Bem vindo ao Finder Users</string>
    <string name="o_projeto_tem_como_intuito_exemplificar_algumas_aborgadens_do_desenvolvimento_mobile">O projeto tem como intuito exemplificar algumas aborgadens do desenvolvimento mobile</string>
    <string name="ver_tecnologias_utilizadas">Ver tecnologias utilizadas</string>
    <string name="aqui_est_o_algumas_tecnologias_e_bibliotecas_utilizadas">Aqui estão algumas tecnologias e bibliotecas utilizadas:</string>
    <string name="modulariza_o">- Modularização</string>
    <string name="detalhes_das_tecnologias">Detalhes das tecnologias</string>
</resources>