<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.TecnologiasFragment">

        <TextView
            android:id="@+id/textView_titulo_tecnologias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:gravity="center"
            android:text="@string/aqui_est_o_algumas_tecnologias_e_bibliotecas_utilizadas"
            android:textSize="@dimen/text_size_titulo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_tecnologias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_text_descricao"
            android:gravity="center"
            android:text="@string/modulariza_o"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_titulo_tecnologias" />

        <Button
            android:id="@+id/button_detalhes_tecnologias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin_top_button"
            android:layout_marginEnd="@dimen/margin"
            android:background="@color/black"
            android:gravity="center"
            android:text="@string/detalhes_das_tecnologias"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_tecnologias" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>